[package]
name = "rust_task"
version = "0.1.2"
edition = "2021"
description = "CLI assistant made in rust."
license = "GPL-3.0"
keywords = ["cli", "assistant", "application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyu_rust_util = "0.1.64"
time = "0.3.21"
